# Curious-C--Facilities

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  testclang.cpp
Ax-pp-Lib-Custom/: .gitignore  CMakeLists.txt  binomial_heap.tcc  leftist_heap.tcc  main.cpp
Circuit/: CMakeLists.txt  main.cpp
Haskell-Qt/: CMakeLists.txt  FFI.hs  Haskell-Qt.cabal  VirtualFunction.cpp  executable.hi  first.py  main.cpp
Haskell-Qt/src/: FFI.h  FfiEx.hs  Main.hs  Termios.hs  termops.c  termops.h
MarkdownBBCodeParser/: CMakeLists.txt
MetaParsers++/: CMakeLists.txt  RegexpParser.cpp  RegexpParser.h  main.cpp
Newbie-Lang/: CMakeLists.txt
Newbie-Lang/src/main/cpp/: Parser.cpp  Parser.h  StateMachine.cpp  StateMachine.h
StaticTypedLang/: CMakeLists.txt  main.cpp
StaticTypedLang/Source/Lang/Basics/: Macros.hpp  Object.cpp  Object.hpp
StaticTypedLang/Source/Lang/Lexics/: Keyword.cpp  Keyword.hpp  Token.cpp  Token.hpp
StaticTypedLang/Source/Lang/Semantics/: Axiom.cpp  Axiom.hpp  README.md  Template.cpp  Template.hpp
TypeScriptVM/: CMakeLists.txt
TypedVM/: CMakeLists.txt  main.cpp
TypedVM/Source/TypedVm/: ClassInstance.cpp  ClassInstance.h  FiniteStateMachine.h  Macros.h  TypedVm.cpp  TypedVm.h
TypedVM/Source/TypedVm/Basics/: Object.cpp  Object.hpp
TypedVM/Source/TypedVm/Semantics/: Class.cpp  Class.hpp  Interface.cpp  Interface.hpp  Type.cpp  Type.hpp
XmlPlus/: CMakeLists.txt  main.cpp
asm_interpreter/: CMakeLists.txt
bad-network/: CMakeLists.txt
cipher/: .gitmodules  BlowFish.cc  BlowFish.hh  CMakeLists.txt  GUIApp.cpp  GUIApp.hpp  MiniFS.cpp  MiniFS.h  client.cpp  file_and_memory.cpp  file_and_memory_test.cpp  main.cpp  server.cpp  sh.exe.stackdump  wait.cpp  wait.h
compiler/: CMakeLists.txt  main.cpp
coroutine4/: CMakeLists.txt  main.cpp  test_jmp.cpp
cpp_test/: CMakeLists.txt  main.cpp
data_structures/: CMakeLists.txt  main.cpp
descent-parser/: 2.pl0  CMakeLists.txt  lexer.c  main.c
findpthread/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  findpthread.sln  findpthread.vcxproj  findpthread.vcxproj.filters  main.c
fork/: CMakeLists.txt  main.cpp
forkjoinpool/: CMakeLists.txt  main.cpp
fuck_graphics/: CMakeLists.txt  GRAPH.H  graphics.h  main.cpp
haha/: CMakeLists.txt  input.txt  main.cpp
helping_others/: CMakeLists.txt  main.cpp
lang/: CMakeLists.txt  main.cpp
networker/: CMakeLists.txt
pointer/: CMakeLists.txt  main.cpp
prime/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sequence_point/: CMakeLists.txt  main.c
student/: CMakeCache.txt  CMakeLists.txt  demo.c  main.c
student/play/: CMakeLists.txt  first.c
symmetry/: CMakeLists.txt  another.c  main.c
test_overloading/: CMakeLists.txt  main.cpp
type_system/: CMakeLists.txt  main.cpp
